# vote-delegation

./: Anchor.toml  README.md
.github/workflows/: ci-soteria.yml
programs/vote-delegation/: Cargo.toml
programs/vote-delegation/src/: error.rs  lib.rs
programs/vote-delegation/src/instructions/: create_voter_weight_record.rs  mod.rs  reclaim_delegation.rs  reclaim_voter_weight_record.rs  revoke_vote.rs  set_precursor.rs  update_voter_weight_record.rs
programs/vote-delegation/src/state/: delegation.rs  mod.rs  registrar.rs  settings.rs  voter_weight_record.rs
programs/vote-delegation/src/tools/: mod.rs
programs/vote-delegation/tests/: test_create_voter_weight_record.rs  test_reclamation.rs  test_revoke_vote.rs  test_update_voter_weight_record.rs
programs/vote-delegation/tests/program_test/: delegation_test.rs  governance_test.rs  mod.rs  program_test_bench.rs  tools.rs
