[package]
description = "Created with Anchor"
edition = "2021"
name = "vote-delegation"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "vote_delegation"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
num-derive = "0.3.3"
num-traits = "0.2.15"
spl-governance = "2.2.4"
