[package]
description = "Created with Anchor"
edition = "2021"
name = "vote-delegation"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "vote_delegation"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = {version = "0.25.0", git = "https://github.com/wizzeh/anchor", branch = "orphan-account", features = ["init-if-needed"]}
anchor-spl = {version = "0.25.0", git = "https://github.com/wizzeh/anchor", branch = "orphan-account"}
borsh = "0.9.3"
num-derive = "0.3.3"
num-traits = "0.2.15"
solana-program = "^1.10.31"
spl-governance = {version = "3.0.0", git = "https://github.com/wizzeh/solana-program-library", branch = "relinquish-partial"}
static_assertions = "1.1.0"

[dev-dependencies]
solana-program-test = "^1.10.31"
solana-sdk = "^1.10.31"
